--- a/kaggle_mnist_cnn.ipynb
+++ b/kaggle_mnist_cnn.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "kaggle-mnist-cnn.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNv5y4XkLoS0hi2GmXC2Q1K",
+      "authorship_tag": "ABX9TyNn44VuungZwCe6Xqq/hSEb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -165,6 +165,33 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8pr5EIlzZWQp"
+      },
+      "source": [
+        "data = pd.read_csv('test.csv')\n",
+        "X_test = data.to_numpy(dtype='float32')\n",
+        "X_test = X_test/255.0\n",
+        "X_test = X_test.reshape((-1,28,28,1))\n",
+        "X_test.shape"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gxvSBNvQZbAZ"
+      },
+      "source": [
+        "y_pred = model.predict(X_test)\n",
+        "y_pred, y_pred.shape"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
